--- a/.gitignore
+++ b/.gitignore
@@ -19,3 +19,14 @@
 *.exe
 *.out
 *.app
+
+#CMake files
+CMakeLists.txt
+CMakeCache.txt
+CMakeFiles
+Makefile
+cmake_install.cmake
+install_manifest.txt
+
+IDE files
+*.kdev4
