--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,6 +3,6 @@ cmake_minimum_required(VERSION 3.2.2)
 project(cpplib)
 
 add_subdirectory(DataStructs)
-add_subdirectory(CStringUtil)
+add_subdirectory(StringUtil)
 add_subdirectory(Math)
 add_subdirectory(test)
